--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
           Contact Me
         </button>
 
-
-        <div class="modal fade" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
           <div class="modal-dialog" role="document">
             <div class="modal-content">
               <div class="modal-header">
-                <h5 class="modal-title">Contact Information</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Contact Information</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                   <span aria-hidden="true">&times;</span>
                 </button>
@@ -54,24 +54,12 @@
                   <li class="list-inline-item"><a href="#" target="_blank"> <i class="fab fa-gitlab hover"></i></a></li>
                   <li class="list-inline-item"><a href="codersquirrelbln@gmail.com" target="_blank"><i class="fas fa-envelope hover"></i></a></li>
                 </ul>
-
-                </div>
               </div>
-
-
             </div>
           </div>
         </div>
-
-
-      </div>
-
-
-
-          </div>
-        </div>
-      </div>
     </div>
+  </div>
 
     <div class="container content">
       <div class="card-portfolio">
