add work in progress info

--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
             <p>This is still a work in progress and will be updated as it advances.</p>
           </p>
           <div class="button">
-            <a href="#" target="_blank" class="btn-project">Work in Progress</a>
-            <a href="#" target="_blank" class="btn-project">Work in Progress</a>
+            <a href="work_in_progress.html" class="btn-project">Go to Project</a>
+            <a href="work_in_progress.html" class="btn-project">See Code</a>
             <a href="casestudy_flashcards.html" class="btn-project">Read case study</a>
           </div>
         </div>
