--- a/work_in_progress.html
+++ b/work_in_progress.html
@@ -12,16 +12,11 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </head>
 <body>
-  <div class="container collapsible">
+  <div class="container">
     <div class="content">
-
-
-    <h2>This is still a work in progress</h2>
-
-    <p>More will come soon...</p>
-
-
-   <div>
+      <h2>This is still a work in progress</h2>
+      <p>More will come soon...</p>
+      <div>
         <ul class="casestudy-directory">
           <li><a href="casestudy_calculator.html">Read previous case study</a></li>
           <li><a href="index.html">Home</a></li>
@@ -30,27 +25,27 @@
            <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
              <div class="modal-dialog" role="document">
                <div class="modal-content">
-                 <div class="modal-header">
-                   <h5 class="modal-title" id="exampleModalLabel">Contact Information</h5>
-                   <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                     <span aria-hidden="true">&times;</span>
-                   </button>
-                 </div>
-                 <div class="modal-body">
-                   <ul class="list-inline">
-                     <li class="list-inline-item"><a href="https://github.com/codersquirrelbln/" target="_blank"><i class="fab fa-github hover"></i></a></li>
-                     <li class="list-inline-item"><a href="https://www.linkedin.com/in/elisaburghard/" target="_blank"><i class="fab fa-linkedin hover"></i></a></li>
-                     <li class="list-inline-item"><a href="#" target="_blank"> <i class="fab fa-gitlab hover"></i></a></li>
-                     <li class="list-inline-item"><a href="codersquirrelbln@gmail.com" target="_blank"><i class="fas fa-envelope hover"></i></a></li>
-                   </ul>
-                 </div>
-               </div>
-             </div>
-           </div>
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Contact Information</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+                  <div class="modal-body">
+                    <ul class="list-inline">
+                      <li class="list-inline-item"><a href="https://github.com/codersquirrelbln/" target="_blank"><i class="fab fa-github hover"></i></a></li>
+                      <li class="list-inline-item"><a href="https://www.linkedin.com/in/elisaburghard/" target="_blank"><i class="fab fa-linkedin hover"></i></a></li>
+                      <li class="list-inline-item"><a href="#" target="_blank"> <i class="fab fa-gitlab hover"></i></a></li>
+                      <li class="list-inline-item"><a href="codersquirrelbln@gmail.com" target="_blank"><i class="fas fa-envelope hover"></i></a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
           </li>
           <li><a href="casestudy_elderme.html">Read next case study</a></li>
         </ul>
-     </div>
+      </div>
     </div>
   </div>
 </body>
