--- a/casestudy_calculator.html
+++ b/casestudy_calculator.html
@@ -59,33 +59,21 @@
 
    <div>
       <ul class="casestudy-directory">
-        <li><a href="casestudy_elderme.html">Read previous case study</a></li>
+        <li><a href="casestudy_elderme.html">Previous case study</a></li>
         <li><a href="index.html">Home</a></li>
-        <li>
-          <a href="" data-toggle="modal" data-target="#exampleModal">Contact Me</a>
-          <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog" role="document">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <h5 class="modal-title" id="exampleModalLabel">Contact Information</h5>
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                  </button>
-                </div>
-                <div class="modal-body">
-                  <ul class="list-inline">
-                    <li class="list-inline-item"><a href="https://github.com/codersquirrelbln/" target="_blank"><i class="fab fa-github hover"></i></a></li>
-                    <li class="list-inline-item"><a href="https://www.linkedin.com/in/elisaburghard/" target="_blank"><i class="fab fa-linkedin hover"></i></a></li>
-                    <li class="list-inline-item"><a href="#" target="_blank"> <i class="fab fa-gitlab hover"></i></a></li>
-                    <li class="list-inline-item"><a href="codersquirrelbln@gmail.com" target="_blank"><i class="fas fa-envelope hover"></i></a></li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </div>
-        </li>
-        <li><a href="casestudy_flashcards.html">Read next case study</a></li>
+        <li><a href="casestudy_flashcards.html">Next case study</a></li>
       </ul>
+  </div>
+
+  <div class="contact">
+    <p>
+      <ul class="list-inline">
+        <li class="list-inline-item"><a href="https://github.com/codersquirrelbln/" target="_blank"><i class="fab fa-github hover"></i></a></li>
+        <li class="list-inline-item"><a href="https://www.linkedin.com/in/elisaburghard/" target="_blank"><i class="fab fa-linkedin hover"></i></a></li>
+        <li class="list-inline-item"><a href="#" target="_blank"> <i class="fab fa-gitlab hover"></i></a></li>
+        <li class="list-inline-item"><a href="codersquirrelbln@gmail.com" target="_blank"><i class="fas fa-envelope hover"></i></a></li>
+      </ul>
+    </p>
   </div>
 </body>
 </html>
