adding email modal

--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
                       </button>
                     </div>
                     <div class="modal-body">
-                      <form
+                      <p>codersquirrelbln@gmail.com</p>
+                     <!--  <form
                         action="mailto:codersquirrelbln@gmail.com"
                         method="POST"
                         enctype="multipart/form-data"
@@ -64,7 +65,7 @@
 
                       <input type="submit" value="Email This Form">
 
-                      </form>
+                      </form> -->
 
                   </div>
                 </div>
