--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
 
         <div class="contact">
           <ul class="list-inline">
-            <li class="list-inline-item"><a href="https://github.com/codersquirrelbln/" target="_blank"><i class="fab fa-github hover"></i></a></li>
-            <li class="list-inline-item"><a href="https://www.linkedin.com/in/elisaburghard/" target="_blank"><i class="fab fa-linkedin hover"></i></a></li>
-            <li class="list-inline-item"><a href="#" target="_blank"> <i class="fab fa-gitlab hover"></i></a></li>
-            <li class="list-inline-item"><a href="" data-toggle="modal" data-target="#exampleModal"><i class="fas fa-envelope hover"></i></a></li>
+            <li class="list-inline-item"><a href="https://github.com/codersquirrelbln/" target="_blank"><i class="fab fa-github"></i></a></li>
+            <li class="list-inline-item"><a href="https://www.linkedin.com/in/elisaburghard/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+            <li class="list-inline-item"><a href="#" target="_blank"> <i class="fab fa-gitlab"></i></a></li>
+            <li class="list-inline-item"><a href="" data-toggle="modal" data-target="#exampleModal"><i class="fas fa-envelope"></i></a></li>
 
               <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog" role="document">
@@ -141,5 +141,18 @@
   </div>
 
   <script src="javascript/main.js"></script>
+
+<footer>
+    <div class="contact">
+      <ul class="list-inline">
+        <li class="list-inline-item footer">&copy 2019, Elisa Burghard</li>
+        <li class="list-inline-item icon-footer"><a href="https://github.com/codersquirrelbln/" target="_blank"><i class="fab fa-github footer icon-footer "></i></a></li>
+        <li class="list-inline-item footer icon-footer"><a href="https://www.linkedin.com/in/elisaburghard/" target="_blank"><i class="fab fa-linkedin footer icon-footer"></i></a></li>
+        <li class="list-inline-item footer icon-footer"><a href="#" target="_blank"> <i class="fab fa-gitlab"></i></a></li>
+        <li class="list-inline-item footer icon-footer"><a href="" data-toggle="modal" data-target="#exampleModal"><i class="fas fa-envelope"></i></a></li>
+      </ul>
+    </div>
+
+</footer>
 </body>
 </html>
