change color of links

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <div class="card-portfolio-text">
           <h2>ElderMe</h2>
             <p>
-              ElderMe is a platform for senior users to find volunteers for activities such as going to the theatre, meeting for a cup of tea or taking a walk in the park. The project was built within two weeks using Ruby on Rail in collaboration with front end developers <a href="https://github.com/Holdenro" target="_blank">Ronan Recune</a> and <a href="https://github.com/M-algbawi" target="_blank">Monther Al Gbawi</a>.
+              ElderMe is a platform for senior users to find volunteers for activities such as going to the theatre, meeting for a cup of tea or taking a walk in the park. The project was built within two weeks using Ruby on Rail in collaboration with front end developers <a href="https://github.com/Holdenro" class="link"  target="_blank">Ronan Recune</a> and <a href="https://github.com/M-algbawi" class="link" target="_blank">Monther Al Gbawi</a>.
             </p>
           <div class="button">
             <a href="http://www.elderme.live/" target="_blank" class="btn-project">Go to Project</a>
@@ -108,7 +108,7 @@
           <h2>Visa Calculator</h2>
           <p>
             The visa calculator enables travellers to calculate one or multiple trips to a country or visa zone such as the Schengen Zone. The user can insert individual visa regulations such as ho many days out if a time frame you may be in the country. It informs the user how many days they can still use up or have to remove to not overstay the visit.
-            This project was built using JavaScript and made use of the flatpickr as a datetime picker in collaboration with front end developer <a href="https://github.com/Holdenro" target="_blank">Ronan Recune</a>.
+            This project was built using JavaScript and made use of the flatpickr as a datetime picker in collaboration with front end developer <a href="https://github.com/Holdenro" class="link" target="_blank">Ronan Recune</a>.
           </p>
           <div class="button">
             <a href="https://codersquirrelbln.github.io/visa_calculator/" target="_blank" class="btn-project">Go to Project</a>
@@ -127,7 +127,7 @@
           <h2>Flashcard App</h2>
           <p>
             This flashcards app helps learning new words in a foreign language, manually add new words as well as a picture to go along with it. The picture can either be taken individually or inserted from sources off the internet.
-            This project will be build in Ruby on Rails in collaboration with designer <a href="stephaniehawkins.design">Stephanie Hawkins</a>.
+            This project will be build in Ruby on Rails in collaboration with designer <a href="stephaniehawkins.design"  class="link">Stephanie Hawkins</a>.
             <p>This is still a work in progress and will be updated as it advances.</p>
           </p>
           <div class="button">
