add copy btn work - in progress

--- a/index.html
+++ b/index.html
@@ -43,13 +43,18 @@
                 <div class="modal-dialog" role="document">
                   <div class="modal-content">
                     <div class="modal-header">
-                      <h5 class="modal-title" id="exampleModalLabel">Contact me</h5>
+                      <h5 class="modal-title" id="exampleModalLabel">Contact me via Email</h5>
                       <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                       </button>
                     </div>
                     <div class="modal-body">
-                      <p>codersquirrelbln@gmail.com</p>
+                      <!-- The text field -->
+                      <input type="text" value="codersquirrelbln@gmail.com" id="my-input">
+
+                      <!-- The button used to copy the text -->
+                      <button onclick="copyEmail()">Copy</button>
+                      <!-- <p>codersquirrelbln@gmail.com</p> -->
                      <!--  <form
                         action="mailto:codersquirrelbln@gmail.com"
                         method="POST"
