--- a/casestudy_elderme.html
+++ b/casestudy_elderme.html
@@ -134,41 +134,29 @@
     <div class="card-case-study">
       <h3>Thanks</h3>
       <p>
-        This was a team effort, I could not have done it without <a href="https://github.com/Holdenro" target="_blank">Ronan Recune</a> - design/front end, and <a href="https://github.com/M-algbawi" target="_blank">Monther Al Gbawi</a> - front end. It has been a pleasure to work with you!
+        This was a team effort, I could not have done it without <a href="https://github.com/Holdenro" class="link" target="_blank">Ronan Recune</a> - design/front end, and <a href="https://github.com/M-algbawi" class="link" target="_blank">Monther Al Gbawi</a> - front end. It has been a pleasure to work with you!
       </p>
     </div>
 
 
    <div>
       <ul class="casestudy-directory">
-        <li><a href="casestudy_flashcards.html">Read previous case study</a></li>
-        <li><a href="index.html">Home</a></li>
-        <li>
-         <a href="" data-toggle="modal" data-target="#exampleModal">Contact Me</a>
-         <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-           <div class="modal-dialog" role="document">
-             <div class="modal-content">
-               <div class="modal-header">
-                 <h5 class="modal-title" id="exampleModalLabel">Contact Information</h5>
-                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                   <span aria-hidden="true">&times;</span>
-                 </button>
-               </div>
-               <div class="modal-body">
-                 <ul class="list-inline">
-                   <li class="list-inline-item"><a href="https://github.com/codersquirrelbln/" target="_blank"><i class="fab fa-github hover"></i></a></li>
-                   <li class="list-inline-item"><a href="https://www.linkedin.com/in/elisaburghard/" target="_blank"><i class="fab fa-linkedin hover"></i></a></li>
-                   <li class="list-inline-item"><a href="#" target="_blank"> <i class="fab fa-gitlab hover"></i></a></li>
-                   <li class="list-inline-item"><a href="codersquirrelbln@gmail.com" target="_blank"><i class="fas fa-envelope hover"></i></a></li>
-                 </ul>
-               </div>
-             </div>
-           </div>
-         </div>
-        </li>
-        <li><a href="casestudy_calculator.html">Read next case study</a></li>
+        <li><a href="casestudy_flashcards.html" class="link">Previous case study</a></li>
+        <li><a href="index.html" class="link">Home</a></li>
+        <li><a href="casestudy_calculator.html" class="link">Next case study</a></li>
       </ul>
   </div>
+  <footer>
+      <div class="contact">
+        <ul class="list-inline">
+          <li class="list-inline-item footer">&copy 2019, Elisa Burghard</li>
+          <li class="list-inline-item icon-footer"><a href="https://github.com/codersquirrelbln/" target="_blank"><i class="fab fa-github footer icon-footer "></i></a></li>
+          <li class="list-inline-item footer icon-footer"><a href="https://www.linkedin.com/in/elisaburghard/" target="_blank"><i class="fab fa-linkedin footer icon-footer"></i></a></li>
+          <li class="list-inline-item footer icon-footer"><a href="#" target="_blank"> <i class="fab fa-gitlab"></i></a></li>
+          <li class="list-inline-item footer icon-footer"><a href="" data-toggle="modal" data-target="#exampleModal"><i class="fas fa-envelope"></i></a></li>
+        </ul>
+      </div>
 
+  </footer>
 </body>
 </html>
