images commented out temporaily

--- a/casestudy_elderme.html
+++ b/casestudy_elderme.html
@@ -40,9 +40,9 @@
         <h3>First steps:</h3>
         <div class="container">
           <div class="card-portfolio">
-            <div class="roadmap">
+          <!--   <div class="roadmap">
               <img src="images/20190825_123939_copy_2copy.jpg" alt="Drawn out Roadmap of backend code" class="roadmap">
-            </div>
+            </div> -->
             <div class="card-portfolio-text">
               <ul>
                 <li>
@@ -62,13 +62,13 @@
             </div>
           </div>
 
-          <div>
+          <!-- <div>
             <ul class="trello">
               <img src="images/elderme_trello_board.png" alt="Screenshot overview Trello project" class="study-pic">
               <img src="images/elderme_users_0percent.png" alt="detail of trello - card of overview task">
               <img src="images/elderme_users_33percent.png" alt="detail of trello - card of partially finished task">
               <img src="images/elderme_users_100percent.png" alt="detail of trello - card of finished task">
-            </ul>
+            </ul> -->
           </div>
         </div>
       </div>
@@ -77,7 +77,7 @@
         <h3>Lessons learned</h3>
         <ul>
           <li>
-            Working in teams is hard. When working on a project by yourself, you are the one with all the strings in hand. You decide in which direction the product will move, what to add, what the MVP should include, how fast to move. In a team, you have to come to a consensus. You have to slow down situations to now jump the gun but follow the order of things.
+            Working in teams is hard. When working on a project by yourself, you are the one with all the strings in hand. You decide in which direction the product will move, what to add, what the MVP should include, how fast to move. In a team, you have to come to a consensus. You have to slow down situations to not jump the gun but follow the order of things.
           </li>
 
           <li>
@@ -92,9 +92,9 @@
             Communication. Probably the biggest part of working in a team, that needs to be the top priority above all else. If there is no (good and productive) communication, there won’t be a (good) product that users will use. And does a product that has no users even exist? The tree that falls when no one is around, doesn’t make a sound. Even working at one work station does not mean there will be automatic communication. Using tools like slack also help having a record that you can refer to when things get hectic. When communicating with each other, be kind to one another, respectful, try to see where the other person is coming from. Give constructive criticism, say why you prefer one solution over the other so that the other person can understand here YOU are coming from.
           </li>
 
-          <li>
+         <!--  <li>
             Sometimes it is a good idea to involve an uninvolved person in resolving conflicts. A mediator.
-          </li>
+          </li> -->
 
           <li>
             You need to be on the top of your game. When multiple people work in the same documents, even when they are on different tasks in different parts of the code, it can get confusing. Not jumping to the next task without consulting the task list and its assignees is fundamental.
