add approach questions

--- a/casestudy_flashcards.html
+++ b/casestudy_flashcards.html
@@ -65,6 +65,8 @@
         </li>
         <li>Set up calls regularily</li>
         <li>Reach out to colleagues and ask if they are willing to help with design and code review</li>
+        <li>What would be the most complex app that we would want to build with all features?</li>
+        <li>What is the MVP?</li>
       </ul>
     </div>
 
