add last updated

--- a/casestudy_flashcards.html
+++ b/casestudy_flashcards.html
@@ -18,6 +18,8 @@
     <h2>Case study Flashcards</h2>
     <p><em>This project is still in working progress and will be updated with the newest advances soon...</em></p>
 
+    <p>last updated: November 25th, 2019</p>
+
     <div>
       <h3>Goal</h3>
       <ul>
@@ -146,6 +148,7 @@
 
     <h3>Thanks</h3>
     <p><a href="" target="_blank"></a> design the front end for me, thank you for that!</p> -->
+
   </div>
 
 
