add link to code on gitlab

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
           </p>
           <div class="button">
             <a href="work_in_progress.html" class="btn-project">Go to Project</a>
-            <a href="work_in_progress.html" class="btn-project">See Code</a>
+            <a href="https://gitlab.com/codersquirrel/flashcardApp" target="_blank"  class="btn-project">See Code</a>
             <a href="casestudy_flashcards.html" class="btn-project">Read case study</a>
           </div>
         </div>
