--- a/index.html
+++ b/index.html
@@ -125,14 +125,15 @@
 
       <div class="card-portfolio">
         <div class="product-pic">
-          <p class="coming-soon"><em>Coming soon</em></p>
+          <img src="images/roadmap.jpg" alt="drawn out roadmap" id="flashcard-pic">
+          <!-- <p class="coming-soon"><em>Coming soon</em></p> -->
         </div>
 
         <div class="card-portfolio-text">
           <h2>Flashcard App</h2>
           <p>
             This flashcards app helps learning new words in a foreign language, manually add new words as well as a picture to go along with it. The picture can either be taken individually or inserted from sources off the internet.
-            This project will be build in Ruby on Rails in collaboration with designer <a href="stephaniehawkins.design"  class="link">Stephanie Hawkins</a>.
+            This project will be build in Ruby on Rails in collaboration with designer <a href="stephaniehawkins.design" class="link">Stephanie Hawkins</a>.
             <p>This is still a work in progress and will be updated as it advances.</p>
           </p>
           <div class="button">
