change link to steps page

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
           <h2>Flashcard App</h2>
           <p>
             This flashcards app helps learning new words in a foreign language, manually add new words as well as a picture to go along with it. The picture can either be taken individually or inserted from sources off the internet.
-            This project will be build in Ruby on Rails in collaboration with designer <a href="stephaniehawkins.design" target="_blank" class="link">Stephanie Hawkins</a>.
+            This project will be build in Ruby on Rails in collaboration with designer <a href="http://stephaniehawkins.design/" target="_blank" class="link">Stephanie Hawkins</a>.
             <p>This is still a work in progress and will be updated as it advances.</p>
           </p>
           <div class="button">
