add reading list to index

--- a/index.html
+++ b/index.html
@@ -144,6 +144,30 @@
         </div>
       </div>
     </div>
+    <div class="reading">
+      <h3>
+        Current Reading List
+      </h3>
+      <br>
+      <ul style="list-style-type:none">
+        <li>
+          <strong><a href="http://www.blockchain-basics.com/" target="blank" class="link">Blockchain Basics</a></strong> by <em>Daniel Drescher</em>.
+          <p>
+            Ever since Blockchain@state, a one-day workshop at the State Department in Washington, DC, in 2017, the blockchain technology has fascinated me. I was still a full-time restorer and had nothing to do with programming. Yet the presented case studies showed that Blockchains can be used for more than cryptocurrencies, such as documenting changes in land ownership.
+          </p>
+        </li>
+        <li>
+          <p>
+            I am almost finished with reading <strong><a href="https://en.wikipedia.org/wiki/The_Innovators_(book)" target="_blank" class="link">The Innovators</a></strong> by <em>Walter Issacson</em>, a most interesting journey through the invention of the Computer and all related topics.
+          </p>
+        </li>
+        <li>
+          <p>
+           Since I am a huge crime novel fan, I am also listening to <strong>The Escape</strong> by <em><a href="https://en.wikipedia.org/wiki/David_Baldacci#Bibliography" target="blank" class="link">David Baldacchi</a></em> as an audiobook. I have become quite a fan of this author and am almost going back to back on his novels. Sometimes I do ‘stray' back to my beloved classics, most prominently to books by <em><a href="https://en.wikipedia.org/wiki/Agatha_Christie" target="blank" class="link">Agatha Christie</a></em>.
+          </p>
+        </li>
+      </ul>
+    </div>
   </div>
 
   <script src="javascript/main.js"></script>
