--- a/casestudy_flashcards.html
+++ b/casestudy_flashcards.html
@@ -18,10 +18,31 @@
     <h2>Case study Flashcards</h2>
     <p><em>This project is still in working progress and will be updated with the newest advances soon...</em></p>
 
-  <p>last updated: February 14th, 2020</p>
+  <!-- <p>last updated: February 14th, 2020</p> -->
+  <h4>What I am learning right now</h4>
+  <ul>
+    <li>
+      <h6>Working with a CI Pipeline on GitLab</h6>
+    </li>
+    <li>
+      <h6>Implementing feature to play through a deck of cards</h6>
+    </li>
+  </ul>
+  <br>
+
   <h4>What I learned</h4>
   <!-- <ul style="list-style-type:none"> -->
   <ul>
+    <li>
+      <h6>Vue.js, RoR as an API, and TDD</h6>
+      <p>
+        After doing a deep dive into Vue.js (and absolutely loving it!) and learning more about using Ruby on Rails as an API, I started a completely new repository, leaving the first version of the flashcard app behind, that I started building using only RoR. This gave me a chance to rethink the application more and apply all the newly acquired knowledge.
+      </p>
+      <p>
+        I am thrilled about how the project is coming along and learning so much along the way. I want to put an emphasis on the territory of TDD, which I didn't know a lot about and was somehow a little intimidating by. However, learning from a colleague <a href="https://www.youtube.com/channel/UC9bsDBNvCZEEjrjFdFLtIYAand" target="_blank" class="link">Juan Vqz</a> and his tutorial on <a href="https://www.youtube.com/playlist?list=PL4yLj0azo9NU-qUCvSUZSm92gdxFJAWRc" target="_blank" class="link"> Vue and RoR </a> that all changed rapidly, and I am all aboard, seeing how much easier it makes life in the long run. So thank you for that, Juan!
+      </p>
+    </li>
+    <br>
     <li>
       <h6>Implementing an API to fetch pictures from Unsplash</h6>
       Inside this, limiting the amount of pictures displayed with the option to show more results.
@@ -107,13 +128,10 @@
     <!-- <p>last updated: January 1st, 2020</p> -->
     <!-- <p>...first of all...</p> -->
     <!-- <h4>Happy New Year!</h4> -->
-    <p>
+   <!--  <p>
       Stephanie and I made great progress the last few weeks and getting closer to the final design of the application.
-    </p>
-    <p>
-      After doing a deep dive into Vue.js (and absolutely loving it!) and learning more about using Ruby on Rails as an API, I started a completely new repository, leaving the first version of the flashcard app behind, that I started building using only RoR. This gave me a chance to rethink the application more and apply all the newly acquired knowledge.
-      I am thrilled about how the project is coming along and learning so much along the way. I want to put an emphasis on the territory of TDD, which I didn't know a lot about and was somehow a little intimidating by. However, learning from a colleague <a href="https://www.youtube.com/channel/UC9bsDBNvCZEEjrjFdFLtIYAand" target="_blank" class="link">Juan Vqz</a> and his tutorial on <a href="https://www.youtube.com/playlist?list=PL4yLj0azo9NU-qUCvSUZSm92gdxFJAWRc" target="_blank" class="link"> Vue and RoR </a> that all changed rapidly, and I am all aboard, seeing how much easier it makes life in the long run. So thank you for that, Juan!
-    </p>
+    </p> -->
+
 
     <br>
     <p>...</p>
