--- a/casestudy_calculator.html
+++ b/casestudy_calculator.html
@@ -83,12 +83,30 @@
                 </button>
               </div>
               <div class="modal-body">
+                <!-- The text field -->
+                <input type="text" value="codersquirrelbln@gmail.com" id="my-input">
+              </div>
+            </div>
+          </div>
+        </div>
+      </li>
+       <!-- <li class="list-inline-item"><a href="" data-toggle="modal" data-target="#exampleModal"><i class="fas fa-envelope"></i></a></li>
+        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Contact me via Email</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
                 <input type="text" value="codersquirrelbln@gmail.com" id="my-input">
                 <button onclick="copyEmail()">Copy</button>
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
       </ul>
     </div>
 </footer>
