--- a/casestudy_flashcards.html
+++ b/casestudy_flashcards.html
@@ -283,7 +283,26 @@
         <li class="list-inline-item icon-footer"><a href="https://github.com/codersquirrelbln/" target="_blank"><i class="fab fa-github footer icon-footer "></i></a></li>
         <li class="list-inline-item footer icon-footer"><a href="https://www.linkedin.com/in/elisaburghard/" target="_blank"><i class="fab fa-linkedin footer icon-footer"></i></a></li>
         <li class="list-inline-item footer icon-footer"><a href="https://gitlab.com/codersquirrel" target="_blank"> <i class="fab fa-gitlab"></i></a></li>
+
         <li class="list-inline-item"><a href="" data-toggle="modal" data-target="#exampleModal"><i class="fas fa-envelope"></i></a></li>
+          <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">Contact me via Email</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  <!-- The text field -->
+                  <input type="text" value="codersquirrelbln@gmail.com" id="my-input">
+                </div>
+              </div>
+            </div>
+          </div>
+        </li>
+        <!-- <li class="list-inline-item"><a href="" data-toggle="modal" data-target="#exampleModal"><i class="fas fa-envelope"></i></a></li>
         <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
           <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -299,7 +318,7 @@
             </div>
           </div>
         </div>
-      </div>
+       </div> -->
       </ul>
     </div>
 
