--- a/work_in_progress.html
+++ b/work_in_progress.html
@@ -36,14 +36,49 @@
                       <li class="list-inline-item"><a href="https://github.com/codersquirrelbln/" target="_blank"><i class="fab fa-github hover"></i></a></li>
                       <li class="list-inline-item"><a href="https://www.linkedin.com/in/elisaburghard/" target="_blank"><i class="fab fa-linkedin hover"></i></a></li>
                       <li class="list-inline-item"><a href="#" target="_blank"> <i class="fab fa-gitlab hover"></i></a></li>
-                      <li class="list-inline-item"><a href="codersquirrelbln@gmail.com" target="_blank"><i class="fas fa-envelope hover"></i></a></li>
+
+                      <li class="list-inline-item"><a href="" data-toggle="modal" data-target="#exampleModal"><i class="fas fa-envelope"></i></a></li>
+                        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                          <div class="modal-dialog" role="document">
+                            <div class="modal-content">
+                              <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLabel">Contact me via Email</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                  <span aria-hidden="true">&times;</span>
+                                </button>
+                              </div>
+                              <div class="modal-body">
+                                <!-- The text field -->
+                                <input type="text" value="codersquirrelbln@gmail.com" id="my-input">
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </li>
+                      <!-- <li class="list-inline-item"><a href="" data-toggle="modal" data-target="#exampleModal"><i class="fas fa-envelope"></i></a></li>
+                      <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                        <div class="modal-dialog" role="document">
+                          <div class="modal-content">
+                            <div class="modal-header">
+                              <h5 class="modal-title" id="exampleModalLabel">Contact me via Email</h5>
+                              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                              </button>
+                            </div>
+                            <div class="modal-body">
+                              <input type="text" value="codersquirrelbln@gmail.com" id="my-input">
+                              <button onclick="copyEmail()">Copy</button>
+                          </div>
+                        </div>
+                      </div>
+                     </div> -->
                     </ul>
                   </div>
                 </div>
               </div>
             </div>
           </li>
-          <li><a href="casestudy_elderme.html">Read next case study</a></li>
+          <li><a href="casestudy_elderme.html" class="link">Read next case study</a></li>
         </ul>
       </div>
     </div>
