change buttons and title

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
       <div class="responsive-container">
         <img class="pic mx-auto d-block" src="images/elisa_profile_pic.jpg" alt="Profile Picture of Elisa">
         <div class="content">
-          <h2 class="title">Hi, I am Elisa, a back end developer and art conservator based in Berlin.</h2>
+          <h2 class="title mb-3">Hi, I am Elisa,  <br>
+          a software developer and art conservator based in Berlin.</h2>
           <p>
             While running my own restoration workshop, I started to teach myself coding.
             <!-- insert later
@@ -38,9 +39,9 @@
             ElderMe is a platform for senior users to find volunteers for activities such as going to the theatre, meeting for a cup of tea or taking a walk in the park. The project was built within two weeks using Ruby on Rail in collaboration with front end developers <a href="https://github.com/Holdenro" class="link" target="_blank">Ronan Recune</a> and <a href="https://github.com/M-algbawi" class="link" target="_blank">Monther Al Gbawi</a>.
           </p>
           <div class="button-project">
-             <a href="http://www.elderme.live/" target="_blank" class="button">Go to Project</a>
              <a href="https://github.com/codersquirrelbln/elderme" target="_blank" class="button">See Code</a>
             <a href="casestudy_elderme.html" class="button">Read case study</a>
+             <a href="http://www.elderme.live/" target="_blank" class="button">Go to Project</a>
           </div>
         </div>
       </div>
@@ -56,9 +57,9 @@
             This project was built using JavaScript and made use of the flatpickr as a datetime picker in collaboration with front end developer <a href="https://github.com/Holdenro" class="link" target="_blank">Ronan Recune</a>.
           </p>
           <div class="button-project" >
-            <a href="https://codersquirrelbln.github.io/visa_calculator/" target="_blank" class="button">Go to Project</a>
             <a href="https://github.com/codersquirrelbln/visa_calculator" target="_blank" class="button">See Code</a>
             <a href="casestudy_calculator.html" class="button">Read case study</a>
+            <a href="https://codersquirrelbln.github.io/visa_calculator/" target="_blank" class="button">Go to Project</a>
           </div>
         </div>
       </div>
@@ -75,9 +76,9 @@
             <p>This is still a work in progress and will be updated as it advances.</p>
           </p>
           <div class="button-project">
-            <a href="work_in_progress.html" class="button">Go to Project</a>
             <a href="https://gitlab.com/codersquirrel/flashBack" target="_blank"  class="button">See Code</a>
             <a href="casestudy_flashcards.html" class="button">Read case study</a>
+            <!-- <a href="work_in_progress.html" class="button">Go to Project</a> -->
           </div>
         </div>
       </div>
